--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ cycler==0.12.1
 deep-sort-realtime==1.3.2
 filelock==3.20.2
 Flask==3.1.2
+Flask-SQLAlchemy==3.1.1
 fonttools==4.61.1
 fsspec==2025.12.0
 graphviz==0.21
+greenlet==3.3.0
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -26,6 +28,7 @@ pillow==12.1.0
 polars==1.36.1
 polars-runtime-32==1.36.1
 psutil==7.2.1
+psycopg2==2.9.11
 pyparsing==3.3.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -34,6 +37,7 @@ requests==2.32.5
 scipy==1.15.3
 shapely==2.1.2
 six==1.17.0
+SQLAlchemy==2.0.45
 sympy==1.14.0
 torch==2.9.1
 torchvision==0.24.1
