--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,10 @@
-blinker==1.9.0
-certifi==2026.1.4
-charset-normalizer==3.4.4
-click==8.3.1
-colorama==0.4.6
-contourpy==1.3.2
-cycler==0.12.1
+numpy==1.26.4
+torch==2.1.2
+torchvision==0.16.2
+opencv-python==4.8.1.78
+mediapipe==0.10.9
+ultralytics==8.0.230
 deep-sort-realtime==1.3.2
-filelock==3.20.2
-Flask==3.1.2
-Flask-SQLAlchemy==3.1.1
-fonttools==4.61.1
-fsspec==2025.12.0
-graphviz==0.21
-greenlet==3.3.0
-idna==3.11
-itsdangerous==2.2.0
-Jinja2==3.1.6
-kiwisolver==1.4.9
-MarkupSafe==3.0.3
-matplotlib==3.10.8
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.6
-opencv-python==4.12.0.88
-packaging==25.0
-pillow==12.1.0
-polars==1.36.1
-polars-runtime-32==1.36.1
-psutil==7.2.1
-psycopg2==2.9.11
-pyparsing==3.3.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-PyYAML==6.0.3
-requests==2.32.5
-scipy==1.15.3
-shapely==2.1.2
-six==1.17.0
-SQLAlchemy==2.0.45
-sympy==1.14.0
-torch==2.9.1
-torchvision==0.24.1
-typing_extensions==4.15.0
-ultralytics==8.3.247
-ultralytics-thop==2.0.18
-urllib3==2.6.2
-Werkzeug==3.1.4
+shapely
+matplotlib
+seaborn
